Close USB and Bluetooth choosers when a frame is swapped out

This change expands the set of events which trigger the WebUSB and Web
Bluetooth chooser dialogs to automatically close to include when a
RenderFrameHost is swapped out as happens on cross-origin navigation.

In this situation the dialog would already close when the RFH object
was eventually deleted. This change makes sure it happens as part of
committing the navigation.

Bug: 898645
Change-Id: Ie35ec356687ca12d9d5ec3ee7c9d7efcb09f7f84
Reviewed-on: https://chromium-review.googlesource.com/c/1315932
Commit-Queue: Reilly Grant <reillyg@chromium.org>
Reviewed-by: Nasko Oskov <nasko@chromium.org>
Cr-Commit-Position: refs/heads/master@{#605138}
Former-commit-id: 0a65408413fc7b5a9b848e9e453ce50c3abf98c3