content/browser/frame_host/render_frame_host_impl.cc
@@ -2139,6 +2139,7 @@ void RenderFrameHostImpl::SwapOut(
 
   if (web_ui())
     web_ui()->RenderFrameHostSwappingOut();
+  web_bluetooth_services_.clear();
 
   // TODO(nasko): If the frame is not live, the RFH should just be deleted by
   // simulating the receipt of swap out ack.
